länk till glömt lösen och ny användare
lagt till två länkar till glömt lösen och ny användare

--- a/mockup/login.html
+++ b/mockup/login.html
@@ -21,6 +21,10 @@
           <input type="checkbox" value="remember-me"> Kom ihåg mig
         </label>
         <button class="btn btn-lg btn-primary btn-block" type="submit">Logga in</button>
+        <a href="" title="">Glömt lösenord?</a><br>
+        <a href="" title="">Ny användare?</a><br>
+
+
       </form>
     </div>
 
