--- a/mockup/login.html
+++ b/mockup/login.html
@@ -21,10 +21,11 @@
           <input type="checkbox" value="remember-me"> Kom ihåg mig
         </label>
         <button class="btn btn-lg btn-primary btn-block" type="submit">Logga in</button>
-        <a href="" title="">Glömt lösenord?</a><br>
-        <a href="" title="">Ny användare?</a><br>
-
-
+        <br>
+        <div class="btn-group btn-group-justified">
+          <a class="btn btn-default" href="#" title="">Glömt lösenord?</a>
+          <a class="btn btn-default" href="#" title="">Ny användare?</a>
+        </div>
       </form>
     </div>
 
