Logga istället för "Logga in" samt info om kakor
Har bytt ut texten "Logga in" mot loggan. Har även lag en länk om
coockies och info om cookies som jag kopierade från jensen sidan

--- a/mockup/login.html
+++ b/mockup/login.html
@@ -13,7 +13,7 @@
   <body>
     <div class="container">
       <form class="form-signin">
-        <h2 class="form-signin-heading">Logga in</h2>
+        <div class="center-block"><img src="../assets/bilder/education.png" alt="Jensen Logga"></div>
         <hr>
         <input type="text" class="form-control" placeholder="Användarnamn" required autofocus>
         <input type="password" class="form-control" placeholder="Lösenord" required>
@@ -26,6 +26,39 @@
           <a class="btn btn-default" href="#" title="">Glömt lösenord?</a>
           <a class="btn btn-default" href="#" title="">Ny användare?</a>
         </div>
+         <!-- Button trigger modal -->
+          <a href="" data-toggle="modal" data-target="#myModal">
+          Om Cookies
+          </a>
+
+
+          <!-- Modal -->
+          <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+            <div class="modal-dialog">
+              <div class="modal-content">
+                <div class="modal-header">
+                  <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+                  <h4 class="modal-title" id="myModalLabel">Cookies</h4>
+                </div>
+              <div class="modal-body">
+              Denna webbplats använder sig av sessions-cookies<br>
+              <br>
+              Enligt EU direktiv 5.3 (etc) måste vi informera dig om att JENSENeducation.se/online2 använder sessions-cookies även kallat minnescookies.<br>
+              <br>
+              <strong>Vad är en cookie?</strong><br>
+              En cookie är en textfil som lagras på datorn av en webbserver, information vars syfte är att webbservern kan "komma ihåg" saker om dig nästa gång du besöker webbsiten eller under tiden du är där. Det finns alltså två typer av cookies; de temporära som endast existerar under den session du har med siten (dessa kallas också minnescookies) och de permanenta som lagras på din hårddisk, de man normalt sett förknippar med cookies.
+              <br>
+              <br>
+              <strong>Hur skyddar man sig mot cookies?</strong><br>
+              Det är faktiskt mycket enkelt, det går att ställa in i webbläsaren. I Internet Explorer finns inställningarna under Verktyg->Internetinställningar->Sekretess. Ställer man det i botten är det fritt fram för alla cookies att lagras på hårddisken och läsas av de webbplatser som la in dem. Högst upp är det tvärt om - inga cookies tillåts överhuvudtaget. Du kan också gå in på knappen Avancerat och själv bestämma om och hur cookies ska accepteras. 
+              </div>
+
+              <div class="modal-footer">
+                 <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                  </div>
+               </div><!-- /.modal-content -->
+            </div><!-- /.modal-dialog -->
+          </div><!-- /.modal -->
       </form>
     </div>
 
