--- a/mockup/index.html
+++ b/mockup/index.html
@@ -19,7 +19,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="#">Jensen education</a>
+          <a class="navbar-brand" href="#"><img src="../assets/bilder/education_logga.png" alt="Jensen Logga"></a>
         </div>
         <div class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
@@ -27,7 +27,22 @@
             <li><a href="#">Kurser</a></li>
             <li><a href="#">Kontakt</a></li>
           </ul>
-          <p class="navbar-text navbar-right">Inloggad som <a href="#" class="navbar-link">Robert</a></p>
+          <!--Dropdown menyn -->
+          <ul class="nav navbar-nav navbar-right">
+            <li class="dropdown">
+            <a href="#" class="dropdown-toggle" data-toggle="dropdown">Inloggad som Robert<b class="caret"></b></a>
+              <ul class="dropdown-menu">
+                <!--Exempel på länkar menyn kan ha-->
+                <li><a href="#">Min profil</a></li>
+                <li><a href="#">Mina betyg</a></li>
+                <li><a href="#">Meddelanden</a></li>
+                <li><a href="#">Enkäter</a></li>
+                <li class="divider"></li>
+                <li><a href="#">Logga ut</a></li>
+              </ul>
+            </li>
+          </ul>
+          <!--Dropdown menyn slut -->
         </div>
       </div>
       <div class="well">
