--- a/mockup/index.html
+++ b/mockup/index.html
@@ -19,18 +19,18 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="#"><img src="../assets/bilder/education_logga.png" alt="Jensen Logga"></a>
+          <a class="navbar-brand" href="#"><img src="../assets/bilder/education_vit.png" alt="Jensen Logga"></a>
         </div>
         <div class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
-            <li class="active"><a href="#">Nyheter</a></li>
-            <li><a href="#">Kurser</a></li>
-            <li><a href="#">Kontakt</a></li>
+            <li class="active"><a href="#"><b>Nyheter</b></a></li>
+            <li><a href="#"><b>Kurser</b></a></li>
+            <li><a href="#"><b>Kontakt</b></a></li>
           </ul>
           <!--Dropdown menyn -->
           <ul class="nav navbar-nav navbar-right">
             <li class="dropdown">
-            <a href="#" class="dropdown-toggle" data-toggle="dropdown">Inloggad som Robert<b class="caret"></b></a>
+            <a href="#" class="dropdown-toggle" data-toggle="dropdown">Inloggad som <b>Robert</b><b class="caret"></b></a>
               <ul class="dropdown-menu">
                 <!--Exempel på länkar menyn kan ha-->
                 <li><a href="#">Min profil</a></li>
@@ -43,6 +43,10 @@
             </li>
           </ul>
           <!--Dropdown menyn slut -->
+
+
+          <!--<p class="navbar-text navbar-right">Inloggad som <a href="#" class="navbar-link">Robert</a></p>-->
+
         </div>
       </div>
       <div class="well">
