--- a/mockup/news.html
+++ b/mockup/news.html
@@ -23,7 +23,7 @@
         </div>
         <div class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
-            <li><a href="#"><b>Nyheter</b></a></li>
+            <li class="active"><a href="#"><b>Nyheter</b></a></li>
             <li><a href="#"><b>Kurser</b></a></li>
             <li><a href="#"><b>Kontakt</b></a></li>
           </ul>
